2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (menu_clear_timeout): Clear second
	line of timeout as it may contain the rest of long line.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/main.c: Fix freed memory dereference.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix several memory leaks.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu.c (run_menu): Fix timeout reference point.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c: Try $lang.gmo as well.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix test -a and -o precedence.
	Reported by: adrian15.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/font/font.c (grub_font_construct_glyph): Fix memory leak.

2013-05-03  Andrey Borzenkov <arvidjaar@gmail.com>

	Rename grub-core/tests/checksums.c into grub-core/tests/checksums.h
	and add it as source to functional_test module.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/video_checksum.c: Don't set GENERATE_MODE.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	New series of tests for gfxterm and gfxmenu.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gfxmenu.c (grub_gfxmenu_try): Allow specifying
	the theme path relative to $prefix/themes.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/fb/fbblit.c (grub_video_fbblit_blend_BGR888_RGBA8888):
	Fix order bug.
	(grub_video_fbblit_blend_RGB888_RGBA8888): Likewise.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/gui.h (grub_gfxmenu_timeout_unregister): Free cb
	descriptor.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/view.c (grub_gfxmenu_view_new): Clear
	grub_gfxmenu_timeout_notifications.
	(grub_gfxmenu_view_destroy): Likewise.

2013-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
